kubernetes/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ivolve

---
apiVersion: v1
kind: Namespace
metadata:
  name: argo
