kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: ivolve-deployment
  namespace: ivolve
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ivolve
  template:
    metadata:
      labels:
        app: ivolve
    spec:
      containers:
      - name: ivolve-container
        image: tokamohsen2001/grad-pro:v1
        imagePullPolicy: Always 
        ports:
        - containerPort: 5000
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In 
                values: 
                - ivolve
            topologyKey: kubernetes.io/hostname
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "250m"
          memory: "256Mi"
